cmake_minimum_required(VERSION 3.0)
set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
project( ImageFilters )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ImageFilters ImageFilters.cpp )
target_link_libraries( ImageFilters ${OpenCV_LIBS} )
